fixed vr section overflow problem

--- a/app/SCSS/sections/_vr.scss
+++ b/app/SCSS/sections/_vr.scss
@@ -4,12 +4,13 @@ section.vr {
   margin-bottom: u.rem(60);
   gap: 2rem;
   text-align: center;
+
   & article {
     padding: 3rem 1rem 0;
   }
   & article h1 {
     margin-bottom: 1rem;
-    font-size: clamp(2.5rem, 1rem + 4vw, 6rem);
+    font-size: 4rem;
     text-transform: uppercase;
     font-family: u.$fThin;
     font-weight: 300;
@@ -21,18 +22,27 @@ section.vr {
     & img {
       margin-inline: auto;
     }
+    & article h1 {
+      font-size: 2rem;
+    }
+    & article p {
+      font-size: 0.8rem;
+    }
   }
-  //IN DESKTOP
-  @include u.breakpoint-up(large) {
-    position: relative;
-    & article {
-      position: absolute;
-      right: u.rem(30);
-      bottom: 0;
-      width: min(50vw, u.rem(1000));
-      background-color: #fff;
-      padding-left: 4rem;
-      padding-top: 5rem;
+  & .container {
+    @include u.breakpoint-up(large) {
+      display: flex;
+      position: relative;
+      overflow: hidden;
+
+      & article {
+        position: absolute;
+        width: 650px;
+        background-color: white;
+        padding: 3rem 0 0 3rem;
+        right: 0;
+        bottom: 0;
+      }
     }
   }
 }
